# alcohol

./: .gitignore  CMakeLists.txt  FindAlcaSubset.cpp  README.md  alcohol.sh  conanfile.txt
.github/workflows/: build.yml
_examples/: big_arrays.c  condition_overwrite.c  condition_overwrite2.c  direct_double_free.c  empty.c  free_unallocated.c  indirect_double_free.c  overwrite.c  overwrite_remembered.c  overwrite_remembered_partial.c  while_unallocated.c
cmake/: components.cmake
docs/: MORE_TO_C.md  PVS_REPORT.txt
src/: AftFuncDeclConsumer.hpp  AlcoholPluginAction.cpp  AlcoholPluginAction.hpp  ast.hpp  linter.test.cpp  util.cpp  util.hpp
src/alc/ast/: collect_vars.cpp  collect_vars.hpp  expressions.cpp  expressions.hpp  expressions.test.cpp  has_var.cpp  has_var.hpp  manager.cpp  replace_var.cpp  replace_var.hpp  replace_var.test.cpp  simplify_arithmetic.cpp  simplify_arithmetic.hpp  statements.cpp  statements.hpp  statements.test.cpp
src/alc/constraint/: is_trivial.cpp  is_trivial.hpp  set.cpp  set.hpp  set.test.cpp
src/alc/linter/: address_expr_collector.cpp  address_expr_collector.hpp  address_expr_collector.test.cpp  configuration.cpp  configuration.hpp  linter.cpp  linter.hpp  linter.test.cpp
src/alc/plugin/: AftFuncDeclConsumer.cpp  AftFuncDeclConsumer.hpp  AlcoholPluginAction.cpp  AlcoholPluginAction.hpp  Main.cpp
src/alc/util/: for_each_argument.hpp  indent_text.cpp  indent_text.hpp
src/ast/: collect_vars.cpp  collect_vars.hpp  expression.hpp  expression.test.cpp  expressions.cpp  expressions.hpp  expressions.test.cpp  has_var.cpp  has_var.hpp  manager.cpp  manager.hpp  nodes.hpp  nodes.test.cpp  replace_var.cpp  replace_var.hpp  replace_var.test.cpp  statements.cpp  statements.hpp  statements.test.cpp
src/constraint/: set.cpp  set.hpp  set.test.cpp
src/linter/: address_expr_collector.cpp  address_expr_collector.hpp  address_expr_collector.test.cpp  configuration.cpp  configuration.hpp  linter.cpp  linter.hpp  linter.test.cpp
src/plugin/: AftFuncDeclConsumer.hpp
src/util/: indent_text.cpp  make_unique_from_ref.hpp
